<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jieli.lab1.ListItemsActivity"
    android:columnCount="2"
    tools:rowCount="2"
    tools:columnCount="2"
    android:rowCount="2"
    android:layout_rowWeight="1"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    >

    <RadioButton
        android:text="@string/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/radioButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />

    <CheckBox
        android:text="@string/checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/checkBox"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill" />

    <Switch
        android:text="@string/switch_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/switch1"
        android:layout_row="1"
        android:layout_column="0"

        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:id="@+id/imageButton"
        android:visibility="visible"
        android:contentDescription="@string/image_text"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill" />

</GridLayout>
